Mantis ChangeLog


2005.06.xx  -  1.0.0

- Updated Brazilian Portuguese language (Juliano Ravasi Ferraz / vboctor)
- Updated Danish language (Gunner Poulsen / vboctor)
- Updated Estonian language (Klemens Kasemaa / vboctor)
- Updated Finnish language (Tomi Hurenius / vboctor)
- Updated French language (BZC ToOn'S / vboctor)


2005.05.31  -  1.0.0a3

- 0005514: [administration] unable to manage inactive Projects (thraxisp)
- 0005446: [administration] Configuration control should show defaults (thraxisp)
- 0005652: [administration] email logging fails in email_notify_new_account (masc)
- 0005554: [administration] Implement an administration feature for database statistics (vboctor)
- 0005678: [administration] Hide empty sections in manage_user_page.php (vboctor)
- 0003384: [bugtracker] $g_path setting in config_inc.php will NOT override default (thraxisp)
- 0003729: [bugtracker] When using the browser's back button, the form is cleared out. (thraxisp)
- 0004000: [bugtracker] Cannot export more than 50 items (masc)
- 0004762: [bugtracker] Preformatted text is misbehaving. (thraxisp)
- 0004828: [bugtracker] workflow: defaults for status values (thraxisp)
- 0005304: [bugtracker] "duplicate", "unable to duplicate" -> "unable to reproduce" (thraxisp)
- 0005480: [bugtracker] Change wording of note in workflow transitions management interface when editing rules for all projects (thraxisp)
- 0005526: [bugtracker] current_user_is_anonymous() returns true when it should not (vboctor)
- 0005507: [bugtracker] Reporting page doesn't render... (thraxisp)
- 0005508: [bugtracker] Summary -> Access denied. (thraxisp)
- 0005513: [bugtracker] on close issue, don`t set resolution = resolve (thraxisp)
- 0005527: [bugtracker] Acknowledgement does not work with custom fields (thraxisp)
- 0005606: [bugtracker] Support prefetching of web page for Google Web Accelerator and Browsers (vboctor)
- 0005610: [bugtracker] Actiongroup assign action: wrong permissions check (thraxisp)